tests/broken/writ-without-expression.stderr
error: Expected an expression.
 --> tests/broken/writ-without-expression.rs:4:25
  |
4 | #[oxiplate_inline = "{{ ` }}"]
  |                         ^
